--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,9 @@ code {
 }
 
 .link:hover{
-  color:yellowgreen;
+  color:rgb(50, 205, 91);
 }
 
 .subheading{
-  color:yellowgreen;
+  color:rgb(26, 133, 48);
 }
