--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,9 @@ code {
 
 .link{
   color: white;
-  text-decoration:underline;
+  text-decoration:none;
   text-shadow: 1px 1px 1px white;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
 }
 
